bakkie_derive/tests/ui/fail/app_with_lifetime_param.rs
use bakkie_derive::tool;

#[tool]
async fn my_tool(#[app] app: App<'static>) -> Result<String, String> {
    Ok("test".to_string())
}

fn main() {}