bakkie_derive/tests/ui/fail/app_with_lifetime_param.stderr
error: App parameter must have a type argument, not a lifetime or const
 --> tests/ui/fail/app_with_lifetime_param.rs:4:34
  |
4 | async fn my_tool(#[app] app: App<'static>) -> Result<String, String> {
  |                                  ^^^^^^^
